<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.udpfileswipe.BothActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/IPheader"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Filenameheader"
        android:id="@+id/textView5"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Saveasheader"
        android:id="@+id/textView6"
        android:layout_marginBottom="68dp"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Startbutton"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onTap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Myip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/IPheader2" />

</RelativeLayout>
